--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <p>Copyright 2025 | Todos os direitos reservados.</p>
     </footer>
 
-    <a href="https://wa.me/47 99170-9972" target="_blank" class="btn-whatsapp" data-aos="fade-left" data-aos-delay="300">
+    <a href="https://wa.me/47991709972?text=Oi, tudo bem?" target="_blank" class="btn-whatsapp" data-aos="fade-left" data-aos-delay="300">
         <img src="assets/whatssapp.svg" alt="Botao whatssapp" />
         <span class="tooltip-text">Agende seu horário</span>
     </a>
